# BS-TikTok-Auto

./: CLAUDE.md  Cargo.toml  README.md  TikTok-APITest.ps1  clippy.toml  rustfmt.toml
src/: app.rs  main.rs  theme.rs
src/auth/: callback_server.rs  mod.rs  tiktok_auth.rs  token_store.rs
src/pipeline/: crop.rs  mod.rs  upload.rs
src/settings/: app_settings.rs  mod.rs
src/ui/: about_tab.rs  auth_tab.rs  mod.rs  queue_tab.rs  settings_tab.rs
